[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripting/Trigger.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripting/MissionSystem/ObjectiveSingle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Environments/MissionSection/CompletePlant.gd" type="Script" id=3]
[ext_resource path="res://Scripting/Hint.tscn" type="PackedScene" id=4]

[node name="CompletePlant" type="Spatial" groups=[
"Objectives",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -34.1783, 1.51942, -14.6025 )
script = ExtResource( 3 )

[node name="ObjectiveSample" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Trigger" parent="ObjectiveSample" instance=ExtResource( 1 )]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
must_action = 3
enabled = true

[node name="ObjectivePhoto" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Trigger" parent="ObjectivePhoto" instance=ExtResource( 1 )]
transform = Transform( 4, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0 )
must_action = 1
enabled = true

[node name="ObjectiveWhisker" parent="." instance=ExtResource( 2 )]
visible = false
enabled = true

[node name="Trigger" parent="ObjectiveWhisker" instance=ExtResource( 1 )]
transform = Transform( 4, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0 )
visible = false
enabled = true

[node name="NextActionHint" parent="." instance=ExtResource( 4 )]
transform = Transform( 4, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0 )
visible = false
use_next_hint = true
enabled = false

[node name="AlreadyDoneHint" parent="." instance=ExtResource( 4 )]
transform = Transform( 4, 0, -1.19209e-07, 0, 1, 0, 1.19209e-07, 0, 4, 0, 0, 0 )
visible = false
first_hint_dialog_key = "mission_fauna_plant_already_done1"
use_next_hint = true
disable_timer = true

[connection signal="on_objective_complete" from="ObjectiveSample" to="." method="_on_ObjectiveSample_on_objective_complete"]
[connection signal="on_trigger" from="ObjectiveSample/Trigger" to="." method="Sample_on_trigger"]
[connection signal="on_objective_complete" from="ObjectivePhoto" to="." method="_on_ObjectivePhoto_on_objective_complete"]
[connection signal="on_trigger" from="ObjectivePhoto/Trigger" to="." method="Photo_on_trigger"]
[connection signal="on_objective_complete" from="ObjectiveWhisker" to="." method="_on_ObjectiveWhisker_on_objective_complete"]
